# Hohnor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml
benchmark/iperf3/: CMakeLists.txt  README.md  iperf3_client.cpp  iperf3_server.cpp
benchmark/wrk/: CMakeLists.txt  README.md  test_wrk.sh.in  wrk_client.cpp  wrk_server.cpp
cmake/: catch2.cmake
doc/: DesignSpecific.md
example/: CMakeLists.txt
example/ChatRoom/: CMakeLists.txt  ChatClient.cpp  ChatServer.cpp
example/SnakeGame/: CMakeLists.txt  README.md  snake_game.cpp
example/TCPEcho/: CMakeLists.txt  README.md  echo_client.cpp  echo_server.cpp
example/UDPEcho/: CMakeLists.txt  README.md  echo_client.cpp  echo_server.cpp
example/keyboard/: CMakeLists.txt  README.md  keyboard_example.cpp
hohnor/: CMakeLists.txt  hohnor.h
hohnor/common/: BinaryHeap.h  Callbacks.h  CircularBuffer.h  SyncQueue.h  Types.h
hohnor/core/: CMakeLists.txt  EventLoop.cpp  EventLoop.h  IOHandler.cpp  IOHandler.h  Signal.cpp  Signal.h  SignalSet.cpp  SignalSet.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
hohnor/file/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  LogFile.cpp  LogFile.h
hohnor/io/: CMakeLists.txt  Epoll.h  FdUtils.cpp  FdUtils.h  SignalFDUtils.cpp  SignalFDUtils.h  SignalUtils.cpp  SignalUtils.h
hohnor/log/: AsyncLogging.cpp  AsyncLogging.h  CMakeLists.txt  LogStream.h  Logging.cpp  Logging.h
hohnor/net/: CMakeLists.txt  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  SocketWrap.cpp  SocketWrap.h  TCPSocket.cpp
hohnor/process/: CMakeLists.txt  ProcessInfo.cpp  ProcessInfo.h
hohnor/thread/: BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  Condition.h  CountDownLatch.h  CurrentThread.cpp  CurrentThread.h  Exception.h  Mutex.h  Singleton.h  Thread.cpp  Thread.h  ThreadPool.h
hohnor/time/: CMakeLists.txt  Date.cpp  Date.h  Timestamp.cpp  Timestamp.h
include/hohnor/common/: BinaryHeap.h  Buffer.h  Callbacks.h  CircularBuffer.h
include/hohnor/core/: EventLoop.h  IOHandler.h  Signal.h  Timer.h  TimerQueue.h
include/hohnor/io/: Epoll.h  FdUtils.h
include/hohnor/log/: AsyncLogging.h
include/hohnor/net/: InetAddress.h  Socket.h  SocketWrap.h  TCPAcceptor.h  TCPConnection.h  TCPConnector.h  TCPSocket.h  UDPSocket.h
include/hohnor/thread/: BlockingQueue.h  BoundedBlockingQueue.h  Condition.h  CurrentThread.h  Singleton.h  SyncQueue.h  ThreadPool.h
include/hohnor/time/: Timestamp.h
src/: CMakeLists.txt  Copyable.h  NonCopyable.h  StringPiece.h  Test.cpp  Types.h
src/common/: BinaryHeap.h  Callbacks.h  CircularBuffer.h  StringPiece.h  Types.h
src/core/: CMakeLists.txt  Event.h  EventLoop.cpp  EventLoop.h  IOEvent.h  IOHandler.cpp  IOHandler.h  Signal.cpp  SignalEvent.h  SignalEvents.cpp  SignalHandler.cpp  SignalHandler.h  SignalHandlerSet.cpp  SignalHandlerSet.h  Timer.cpp  Timer.h  TimerQueue.cpp  TimerQueue.h
src/file/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  LogFile.cpp  LogFile.h
src/hohnor/common/: CMakeLists.txt  Copyable.h  SyncQueue.h
src/hohnor/core/: CMakeLists.txt  IOHandler.h  Signal.h  SignalSet.cpp  SignalSet.h
src/hohnor/io/: Epoll.cpp  Epoll.h  FdUtils.h
src/hohnor/net/: InetAddress.cpp  Socket.cpp  SocketWrap.h
src/hohnor/process/: ProcessInfo.h
src/hohnor/thread/: CMakeLists.txt  CurrentThread.cpp  CurrentThread.h  Mutex.h  Singleton.h
src/io/: CMakeLists.txt  Epoll.cpp  Epoll.h  FdUtils.cpp  FdUtils.h  SignalHandler.cpp  SignalHandler.h  SignalUtils.cpp  SignalUtils.h
src/log/: AsyncLogging.cpp  AsyncLogging.h  CMakeLists.txt  LogStream.cpp  LogStream.h  Logging.cpp  Logging.h
src/net/: Buffer.cpp  CMakeLists.txt  InetAddress.cpp  InetAddress.h  Socket.cpp  Socket.h  SocketWrap.cpp  SocketWrap.h  TCPAcceptor.cpp  TCPConnection.cpp  TCPConnector.cpp  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp
src/process/: CMakeLists.txt  ProcessInfo.cpp  ProcessInfo.h
src/socket/: CMakeLists.txt  SocketWrap.cpp  SocketWrap.h
src/thread/: Atomic.h  BlockingQueue.h  BoundedBlockingQueue.h  CMakeLists.txt  CircularBuffer.h  Condition.h  Copyable.h  CountDownLatch.h  CurrentThread.cpp  CurrentThread.h  Exception.h  Mutex.h  NonCopyable.h  Singleton.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Threadpool.h  Types.h
src/time/: CMakeLists.txt  Date.cpp  Date.h  TimeZone.cpp  TimeZone.h  Timestamp.cpp  Timestamp.h
test/: CMakeLists.txt  Test.cpp  TestClient.cpp
test/common/: CMakeLists.txt  binaryheaptest.cpp  circularbuffertest.cpp
test/core/: EventLoop_test.cpp  IOHandler_test.cpp  Signal_test.cpp  Timer_test.cpp
test/file/: FileUtils_test.cpp  LogFile_test.cpp
test/io/: Epoll_test.cpp  FdUtils_test.cpp
test/process/: ProcessInfo_test.cpp
test/thread/: BlockingQueue_test.cpp  BoundedBlockingQueue_test.cpp  CMakeLists.txt  Condition_test.cpp  CountDownLatch_test.cpp  CurrentThread_test.cpp  Exception_test.cpp  Mutex_test.cpp  ThreadPool_test.cpp  Thread_test.cpp  threadtest.cpp
test/time/: Date_test.cpp  Timestamp_test.cpp
tests/: CMakeLists.txt
tests/thread/: CMakeLists.txt  catch2main.cpp  currentThreadTest.cpp  mutexTest.cpp
