include_directories(${PROJECT_SOURCE_DIR}/src/hohnor)
add_subdirectory(hohnor/thread)
# add_subdirectory(hohnor/time)
# add_subdirectory(hohnor/log)
# add_subdirectory(hohnor/file)
# add_subdirectory(hohnor/process)
# add_subdirectory(hohnor/net)
# add_subdirectory(hohnor/io)
# add_subdirectory(hohnor/core)
include_directories(hohnor/common)